--- a/example/Gemfile
+++ b/example/Gemfile
@@ -27,6 +27,10 @@ group :development, :test do
   gem 'rspec-rails', '~> 2.0'
 end
 
+group :development do
+  gem 'custom-rails-generators', path: '../'
+end
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
